--- a/setup-ansible-config.yml
+++ b/setup-ansible-config.yml
@@ -1,17 +1,35 @@
 ---
 - hosts: localhost
   connection: local
-  vars_files:
-  - repository-custom-properties.yml
   vars_prompt:
     - name: username
       prompt: "enter your the username for ansible"
       private: no
+
+    - name: workspace_dir
+      prompt: "enter the path to your workspace folder"
+      private: no
+  vars:
+    configuration_folders:
+    - '{{ workspace_dir }}/configurations'
+    - '{{ workspace_dir }}/inventory'
+    - '{{ workspace_dir }}/logs/'
+    - '{{ workspace_dir }}/library/'
+    - '{{ workspace_dir }}/cache/'
+    - '{{ workspace_dir }}/tmp/planet_resources'
+
   tasks:
+  - name: Create workspace dir
+    file: 
+      path: "{{ workspace_dir }}"
+      state: directory
+      
   - name: create ansible.cfg file from template
     template:
       src: resources/ansible.cfg.j2
-      dest: "{{ apigee_workspace }}/apigee-opdk-playbook-setup-ansible/ansible.cfg"
+      dest: "{{ workspace_dir }}/ansible.cfg"
       backup: yes
       force: yes
+      
+  
 
