--- a/setup-ansible-controller/backup-control-server-requirements.yml
+++ b/setup-ansible-controller/backup-control-server-requirements.yml
@@ -1,2 +1,4 @@
 ---
 - src: https://github.com/carlosfrias/apigee-opdk-setup-ansible-controller-backup.git
+
+- src: https://github.com/carlosfrias/apigee-fetch-files.git
