updated control server setup

--- a/setup-ansible-controller/setup-control-server.yml
+++ b/setup-ansible-controller/setup-control-server.yml
@@ -4,6 +4,7 @@
 
   vars:
     remote_user: friasc
+    ansible_workspace: "~/apigee-workspace"
 
   roles:
   - { role: apigee-opdk-setup-ansible-controller }
