updated control server setup

--- a/setup-ansible-controller/setup-control-server.yml
+++ b/setup-ansible-controller/setup-control-server.yml
@@ -1,6 +1,6 @@
 ---
 - name: Setup the Ansible controller
-  hosts: "{{ target_hosts }}"
+  hosts: "{{ target_host }}"
 
   vars:
     remote_user: friasc
