--- a/setup-ansible-controller/setup.yml
+++ b/setup-ansible-controller/setup.yml
@@ -5,6 +5,7 @@
     remote_user: friasc
     ansible_workspace: "~/apigee-workspace/ansible"
     apigee_workspace: "~/apigee-workspace"
+    apigee_secure_folder: "~/.apigee-secure"
 
   roles:
   - { role: apigee-opdk-setup-ansible-controller }
