--- a/setup-ansible-controller/setup.yml
+++ b/setup-ansible-controller/setup.yml
@@ -3,9 +3,10 @@
   hosts: "{{ target_host }}"
   vars:
     remote_user: friasc
-    ansible_workspace: "~/apigee-workspace/ansible"
-    apigee_workspace: "~/apigee-workspace/test-4-apigee"
-    apigee_secure_folder: "~/apigee-workspace/test-3-apigee-secure"
+    ansible_workspace: "~/.ansible"
+    apigee_workspace: "~/apigee-workspace/playbooks"
+    apigee_secure_folder: "~/.apigee-secure"
+    apigee_custom_properties_folder: "~/.apigee"
 
 
   roles:
