--- a/setup-ansible-controller/setup.yml
+++ b/setup-ansible-controller/setup.yml
@@ -4,7 +4,7 @@
   vars:
     remote_user: friasc
     ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace/playbooks"
+    apigee_workspace: "~/apigee-workspace"
     apigee_secure_folder: "~/.apigee-secure"
     apigee_custom_properties_folder: "~/.apigee"
 
