--- a/setup-ansible-controller/setup.yml
+++ b/setup-ansible-controller/setup.yml
@@ -3,10 +3,17 @@
   hosts: controller
   gather_facts: no
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
-    apigee_secure_folder: "~/.apigee-secure"
-    apigee_custom_properties_folder: "~/.apigee"
+    # This is the location in which Ansible files can be installed.
+    # ansible_workspace: "~/.ansible"
+
+    # This is the location where the playbook folder will be located.
+    # apigee_workspace: "~/apigee-workspace"
+
+    # This is the location where credentials, license material, GCP service account files, AWS key and secret, etc are stored"
+    # apigee_secure_folder: "~/.apigee-secure"
+
+    # This is the location of custom property files.
+    # apigee_custom_properties_folder: "~/.apigee"
   vars_prompt:
     - name: ansible_workspace
       default: "~/.ansible"
