--- a/requirements.yml
+++ b/requirements.yml
@@ -1,2 +1,3 @@
 ---
 - src: https://github.com/carlosfrias/apigee-opdk-setup-ansible-controller.git
+- src: https://github.com/carlosfrias/apigee-opdk-modules.git
