added opdk_cass_auth attribute

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory
+# inventory = inventory
 roles_path = roles
 private_key_file = ~/.ssh/id_rsa
 merge_multiple_cli_tags=True
