--- a/setup/setup.yml
+++ b/setup/setup.yml
@@ -3,16 +3,16 @@
   hosts: localhost
   connection: local
   vars:
-     This is the location in which Ansible files can be installed.
+#     This is the location in which Ansible files can be installed.
      ansible_workspace: "~/.ansible"
 
-     This is the location where the playbook folder will be located.
+#     This is the location where the playbook folder will be located.
      apigee_workspace: "~/apigee-workspace"
 
-     This is the location where credentials, license material, GCP service account files, AWS key and secret, etc are stored"
+#     This is the location where credentials, license material, GCP service account files, AWS key and secret, etc are stored"
      apigee_secure_folder: "~/.apigee-secure"
 
-     This is the location of custom property files.
+#     This is the location of custom property files.
      apigee_custom_properties_folder: "~/.apigee"
 
   roles:
