--- a/setup/setup.yml
+++ b/setup/setup.yml
@@ -13,7 +13,8 @@
      apigee_secure_folder: "~/.apigee-secure"
 
 #     This is the location of custom property files.
-     apigee_custom_properties_folder: "~/.apigee"
+     apigee_c
+     ustom_properties_folder: "~/.apigee"
 
   roles:
   - { role: apigee-opdk-setup-ansible-controller }
