Updated ms port references

--- a/installations/aio/requirements.yml
+++ b/installations/aio/requirements.yml
@@ -13,7 +13,7 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk.git
 
-- src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk-cache.git
+#- src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk-cache.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-os-limits.git
 
