Added template inventory for GCE dynamic inventory.

--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -2,13 +2,21 @@
 - name: Install Edge
   hosts: edge
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
-  - { role: apigee-opdk-os-pre-requisites, tags: ['os'] }
+  - { role: apigee-opdk-modules, tags: ['cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup'] }
+  - { role: apigee-opdk-setup-os-epel, tags: ['os','epel'] }
+  - { role: apigee-opdk-shutdown-iptables, tags: ['os','iptables'] }
+  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['os','yum-proxy-config']}
+  - { role: apigee-opdk-setup-os-minimum, tags: ['os','os-minimum'] }
+  - { role: apigee-opdk-setup-os-limits, tags: ['os','limit'] }
+  - { role: apigee-opdk-setup-os-sysctl, tags: ['os','sysctl'] }
+  - { role: apigee-opdk-setup-selinux-disable, tags: ['os','selinux'] }
+  - { role: apigee-server-restart, tags: ['os','restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
+  - { role: apigee-opdk-setup-os-common, tags: ['os','os-common'] }
+  - { role: apigee-opdk-setup-openjdk, tags: ['os','openjdk'], jdk_version: '1.8' }
   - { role: apigee-opdk-setup-apigee-user, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
@@ -17,8 +25,12 @@
   - { role: apigee-opdk-setup-component-install, component: 'apigee-setup', tags: ['setup', 'apigee-component-install', 'apigee-pre-req','common-install', 'common'] }
   - { role: apigee-opdk-setup-component-install, component: 'apigee-adminapi', tags: ['adminapi', 'apigee-component-install', 'apigee-pre-req','common-install', 'common'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user','ownership', 'apigee-pre-req','common-install', 'common'] }
-  - { role: apigee-opdk-modules, tags: ['config'] }
-  - { role: apigee-opdk-setup-silent-installation-config, tags: ['config'] }
+  - { role: apigee-opdk-settings-private-address, tags: ['cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-management-server, tags: ['cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-ldap, tags: ['cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-region, tags: ['cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-cassandra, tags: ['cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-postgres, tags: ['cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
 
 - name: Configure & Install Cassandra & Zookeeper
   hosts: ds
@@ -26,12 +38,11 @@
   serial: 1
   tags: ['ds']
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['config', 'ds-config']  }
   - { role: apigee-opdk-setup-component, profile: 'ds', tags: ['ds-setup'] }
   - { role: apigee-opdk-start-components, tags: ['ds-start'] }
@@ -43,12 +54,11 @@
   serial: 1
   tags: ['ms']
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['config', 'ms-config']  }
   - { role: apigee-opdk-setup-component, profile: 'ms', tags: ['ms-setup'] }
   - { role: apigee-opdk-setup-component, profile: 'ui', tags: ['ms-setup'] }
@@ -61,33 +71,37 @@
   serial: 1
   tags: ['rmp']
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['config', 'rmp-config']  }
   - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['rmp-setup'] }
   - { role: apigee-opdk-start-components, tags: ['rmp-start'] }
   - { role: apigee-opdk-setup-status, tags: ['rmp-status'] }
+  - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
+  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_router_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
+  - { role: apigee-opdk-server-self, server_types: ['mp'], tags: ['self'] }
+  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_mp_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
 
 - name: Configure & Install Router
-  hosts: rmp
+  hosts: router
   gather_facts: no
   serial: 1
   tags: ['r']
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['config', 'r-config']  }
   - { role: apigee-opdk-setup-component, profile: 'r', tags: ['r-setup'] }
   - { role: apigee-opdk-start-components, tags: ['r-start'] }
   - { role: apigee-opdk-setup-status, tags: ['r-status'] }
+  - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
+  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_router_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
 
 - name: Configure & Install Message Processor
   hosts: mp
@@ -95,16 +109,17 @@
   serial: 1
   tags: ['mp']
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['config', 'mp-config']  }
   - { role: apigee-opdk-setup-component, profile: 'mp', tags: ['mp-setup'] }
   - { role: apigee-opdk-start-components, tags: ['mp-start'] }
   - { role: apigee-opdk-setup-status, tags: ['mp-status'] }
+  - { role: apigee-opdk-server-self, server_types: ['mp'], tags: ['self'] }
+  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_mp_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
 
 - name: Configure & Install Qpid
   hosts: qpid
@@ -118,6 +133,7 @@
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['config', 'qs-config']  }
   - { role: apigee-opdk-setup-component, profile: 'qs', tags: ['qs-setup'] }
   - { role: apigee-opdk-start-components, tags: ['qs-start'] }
@@ -134,6 +150,7 @@
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['config', 'pg-config']  }
   - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['pg-setup'] }
   - { role: apigee-opdk-start-components, tags: ['pg-start'] }
@@ -151,6 +168,7 @@
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-postgres-config, tags: ['config', 'pgmaster-config'] }
   - { role: apigee-opdk-setup-postgres-master }
   - { role: apigee-opdk-setup-status }
@@ -161,12 +179,11 @@
   serial: 1
   tags: ['pgstandby']
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-stop-components, component_name: 'apigee-postgresql' }
   - { role: apigee-opdk-setup-postgres-config, clear_pgdata: True }
   - { role: apigee-opdk-setup-postgres-standby }
@@ -177,12 +194,11 @@
   gather_facts: no
   tags: ['org']
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-org, tags: ['org', 'org-setup'] }
 
 - name: Restart of Planet
@@ -190,8 +206,6 @@
   serial: 1
   tags: ['restart']
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
@@ -203,8 +217,6 @@
   hosts: rmp
   serial: 1
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
@@ -216,53 +228,10 @@
   hosts: r
   serial: 1
   vars:
-    ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
   - { role: apigee-opdk-setup-validate, tags: ['validate'] }
   - { role: apigee-opdk-setup-validate-cleanup, tags: ['validate-cleanup'] }
-
-- name: Download log files
-  hosts: edge
-  gather_facts: no
-  become: true
-  tags: ['logs']
-  roles:
-  - { role: apigee-fetch-files, download_pattern: '{{ pattern }}', download_folder: "{{ playbook_dir }}/{{ target_logs_folder }}" }
-  vars:
-    opdk_installer_path: /tmp/edge
-    apigee_home: /opt/apigee
-    target_logs_folder: planet_logs
-    pattern:
-    - { dir: '/etc/', pattern: 'hosts*' }
-    - { dir: '/etc/', pattern: 'environment' }
-    - { dir: '/etc/', pattern: 'profile' }
-    - { dir: '/etc/', pattern: 'bashrc' }
-    - { dir: '/etc/', pattern: 'resolv.conf' }
-    - { dir: '/etc/', pattern: 'sysctl.conf' }
-    - { dir: '/etc/', pattern: 'sudoers' }
-    - { dir: '/etc/security/', pattern: 'limits.conf' }
-    - { dir: '/etc/security/limits.d/', pattern: '*conf' }
-    - { dir: '/var/log/', pattern: 'messages' }
-    - { dir: '/tmp', pattern: 'setup*.log' }
-    - { dir: '{{ opdk_installer_path }}/', pattern: '*' }
-    - { dir: '{{ apigee_home }}/', pattern: '*.out' }
-    - { dir: '{{ apigee_home }}/var/log', pattern: '*.log' }
-    - { dir: '{{ apigee_home }}/customer/', pattern: '*' }
-    - { dir: '{{ apigee_home }}/etc/', pattern: 'default*.sh' }
-    - { dir: '{{ apigee_home }}/customer', pattern: '*' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*conf' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*cfg' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*yml' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*yaml' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*properties' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*conf' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*cfg' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*yml' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*yaml' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*properties' }
-    - { dir: '{{ apigee_home }}/apigee-postgresql/', pattern: '*conf' }
 
