--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -1,22 +1,34 @@
 ---
-- name: Install Edge
+- name: Complete OS Pre-requisites
   hosts: edge
+  strategy: free
+  tags: ['os']
   vars:
     property_folders:
+  - "~/.apigee-secure"
+  - "~/.apigee"
+  roles:
+  - { role: apigee-opdk-setup-os-epel, tags: ['epel'] }
+  - { role: apigee-opdk-shutdown-iptables, tags: ['iptables'] }
+  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['yum-proxy-config']}
+  - { role: apigee-opdk-setup-os-minimum, tags: ['os-minimum'] }
+  - { role: apigee-opdk-setup-os-limits, tags: ['limit'] }
+  - { role: apigee-opdk-setup-os-sysctl, tags: ['sysctl'] }
+  - { role: apigee-opdk-setup-selinux-disable, tags: ['selinux'] }
+  - { role: apigee-server-restart, tags: ['restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
+  - { role: apigee-opdk-setup-os-common, tags: ['os-common'] }
+  - { role: apigee-opdk-setup-openjdk, tags: ['openjdk'], jdk_version: '1.8' }
+
+- name: Install Edge
+  hosts: edge
+  strategy: free
+  tags: ['edge']
+  vars:
+  property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup'] }
-  - { role: apigee-opdk-setup-os-epel, tags: ['os','epel'] }
-  - { role: apigee-opdk-shutdown-iptables, tags: ['os','iptables'] }
-  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['os','yum-proxy-config']}
-  - { role: apigee-opdk-setup-os-minimum, tags: ['os','os-minimum'] }
-  - { role: apigee-opdk-setup-os-limits, tags: ['os','limit'] }
-  - { role: apigee-opdk-setup-os-sysctl, tags: ['os','sysctl'] }
-  - { role: apigee-opdk-setup-selinux-disable, tags: ['os','selinux'] }
-  - { role: apigee-server-restart, tags: ['os','restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
-  - { role: apigee-opdk-setup-os-common, tags: ['os','os-common'] }
-  - { role: apigee-opdk-setup-openjdk, tags: ['os','openjdk'], jdk_version: '1.8' }
   - { role: apigee-opdk-setup-apigee-user, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
